--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a calculator model under development",
   "main": "index.html",
   "scripts": {
-    "start": "npm run lite", 
+    "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server"
   },
@@ -20,5 +20,10 @@
   "homepage": "https://github.com/Noblelar/Series_Calculators#readme",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
